ThirdPartyLibraries/packages/nuget.org/microsoft.extensions.configuration.abstractions/3.0.0/readme.md
Microsoft.Extensions.Configuration.Abstractions [3.0.0](https://www.nuget.org/packages/Microsoft.Extensions.Configuration.Abstractions/3.0.0)
--------------------

Used by: ThirdPartyLibraries

Target frameworks: netcoreapp3.0

License: [Apache-2.0](../../../../licenses/apache-2.0) 

- package license: [Apache-2.0](https://licenses.nuget.org/Apache-2.0) 
- repository license: [Apache-2.0](https://raw.githubusercontent.com/aspnet/Extensions/master/LICENSE.txt) 
- project license: [Unknown](https://asp.net/) , License should be verified on https://asp.net/

Description
-----------
Abstractions of key-value pair based configuration.
Commonly used types:
Microsoft.Extensions.Configuration.IConfiguration
Microsoft.Extensions.Configuration.IConfigurationBuilder
Microsoft.Extensions.Configuration.IConfigurationProvider
Microsoft.Extensions.Configuration.IConfigurationRoot
Microsoft.Extensions.Configuration.IConfigurationSection

Remarks
-----------
no remarks


Dependencies 1
-----------

|Name|Version|
|----------|:----|
|[Microsoft.Extensions.Primitives](../../../../packages/nuget.org/microsoft.extensions.primitives/3.0.0)|3.0.0|

*This page was generated by a tool.*