ThirdPartyLibraries/packages/nuget.org/microsoft.extensions.configuration.abstractions/5.0.0/readme.md
Microsoft.Extensions.Configuration.Abstractions [5.0.0](https://www.nuget.org/packages/Microsoft.Extensions.Configuration.Abstractions/5.0.0)
--------------------

Used by: ThirdPartyLibraries

Target frameworks: net5.0, net6.0, netcoreapp3.1

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [Unknown](git://github.com/dotnet/runtime) , License should be verified on git://github.com/dotnet/runtime
- project license: [Unknown](https://github.com/dotnet/runtime) , License should be verified on https://github.com/dotnet/runtime

Description
-----------
Abstractions of key-value pair based configuration.

Commonly Used Types:
Microsoft.Extensions.Configuration.IConfiguration
Microsoft.Extensions.Configuration.IConfigurationBuilder
Microsoft.Extensions.Configuration.IConfigurationProvider
Microsoft.Extensions.Configuration.IConfigurationRoot
Microsoft.Extensions.Configuration.IConfigurationSection
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 1
-----------

|Name|Version|
|----------|:----|
|[Microsoft.Extensions.Primitives](../../../../packages/nuget.org/microsoft.extensions.primitives/5.0.0)|5.0.0|

*This page was generated by a tool.*